# openai

./: .gitignore  CHANGELOG.md  README.md  openai.cabal
examples/: README.md
examples/chat-completions-stream-example/: Main.hs
examples/responses-example/: Main.hs
examples/responses-stream-example/: Main.hs
examples/responses-tool-call-example/: Main.hs
examples/weather-chatbot-example/: Main.hs
src/OpenAI/: V1.hs
src/OpenAI/V1/: ResponseFormat.hs  Responses.hs  Tool.hs
src/OpenAI/V1/Chat/: Completions.hs
tasty/: Main.hs
